--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "compilar:sass": "sass --watch src/scss:build/css/"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "gulp": "^5.0.0",
+    "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.77.1"
   },
