--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-webp": "^4.0.1",
     "sass": "^1.77.1"
   },
   "dependencies": {
